Refonte du milestone des villes (#1031)
* fix: only notation posted and not edited for next week str

* nerf progression city milestone

* review

* Update src/main/java/fr/openmc/core/features/city/sub/milestone/CityLevels.java

Co-authored-by: PuppyTransGirl <74014559+PuppyTransGirl@users.noreply.github.com>

---------

Co-authored-by: PuppyTransGirl <74014559+PuppyTransGirl@users.noreply.github.com>